Changed background images, other minor changes.

--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ html, body {
 }
 
 .parallax-one {
-  background-image: url(/Images/MainBackground.jpg);
+  background-image: url(./Images/Yos-Main.jpg);
   background-color: gray;
   min-height: 500px;
   background-attachment: fixed;
@@ -15,7 +15,7 @@ html, body {
 }
 
 .parallax-two {
-  background-image: url(Images/yosemite-2456491_1920.jpg);
+  background-image: url(./Images/Yos-One.jpg);
   background-color: black;
   min-height: 500px;
   background-attachment: fixed;
@@ -26,8 +26,8 @@ html, body {
 }
 
 .parallax-three {
-  background-image: url(/Images/forest-547363_1920.jpg);
-  max-height: 500px;
+  background-image: url(./Images/Fog-One.jpg);
+  max-height: 600px;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -97,7 +97,7 @@ body {
 
 form {
   max-width: 300px;
-  max-height: 600px;
+  max-height: 800px;
   background-color: hsla(0, 0%, 0%, 0.3);
   color: white;
   padding: 10px;
