--- a/main.css
+++ b/main.css
@@ -163,103 +163,9 @@ footer {
 }
 
 .fab {
-  display: relative;
+  display: block;
   padding-left: 20px;
   padding-right: 20px;
   color: hsla(180, 26%, 16%, 1);
+  width: 10%;
 }
-
-/*Icon Bounce*/
-
-.fab:hover {
-  display: block;
-  position: relative;
-  -moz-animation: bounce 0.5s infinite linear;
-  -o-animation: bounce 0.5s infinite linear;
-  -webkit-animation: bounce 0.5s infinite linear;
-  animation: bounce 0.5s 2 linear;
-}
-
-.fas:hover {
-  display: inline-block;
-  position: relative;
-  margin: 0;
-  -moz-animation: bounce 0.5s infinite linear;
-  -o-animation: bounce 0.5s infinite linear;
-  -webkit-animation: bounce 0.5s infinite linear;
-  animation: bounce 0.5s 2 linear;
-  colr: 000;
-}
-
-@-webkit-keyframes bounce {
-  0% {
-    top: 0;
-  }
-  50% {
-    top: -0.2em;
-  }
-  70% {
-    top: -0.3em;
-  }
-  100% {
-    top: 0;
-  }
-}
-
-@-moz-keyframes bounce {
-  0% {
-    top: 0;
-  }
-  50% {
-    top: -0.2em;
-  }
-  70% {
-    top: -0.3em;
-  }
-  100% {
-    top: 0;
-  }
-}
-
-@-o-keyframes bounce {
-  0% {
-    top: 0;
-  }
-  50% {
-    top: -0.2em;
-  }
-  70% {
-    top: -0.3em;
-  }
-  100% {
-    top: 0;
-  }
-}
-
-@-ms-keyframes bounce {
-  0% {
-    top: 0;
-  }
-  50% {
-    top: -0.2em;
-  }
-  70% {
-    top: -0.3em;
-  }
-  100% {
-    top: 0;
-  }
-  @keyframes bounce {
-    0% {
-      top: 0;
-    }
-    50% {
-      top: -0.2em;
-    }
-    70% {
-      top: -0.3em;
-    }
-    100% {
-      top: 0;
-    }
-  }
